Мини рефакторинг